flux/apps/ai/ollama/ollama.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: ollama
  namespace: ollama
spec:
  persistentVolumeClaimRetentionPolicy:
    whenDeleted: Retain
    whenScaled: Retain
  podManagementPolicy: OrderedReady
  replicas: 0
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      name: ollama
  serviceName: ollama
  template:
    metadata:
      labels:
        name: ollama
    spec:
      automountServiceAccountToken: false
      tolerations:
        - key: node-role.kubernetes.io/gpu
          operator: Exists
      containers:
        - name: ollama
          image: docker.io/ollama/ollama:0.34.0 # {"$imagepolicy": "flux-system:ollama-policy"}
          imagePullPolicy: IfNotPresent
          livenessProbe:
            httpGet:
              path: /
              port: 11434
            initialDelaySeconds: 15
            periodSeconds: 20
          resources:
            limits:
              nvidia.com/gpu: '2'
          ports:
            - containerPort: 11434
              protocol: TCP
          volumeMounts:
            - mountPath: /root/.ollama
              name: ollama-models
              readOnly: false
      restartPolicy: Always
      volumes:
        - name: ollama-models
          persistentVolumeClaim:
            claimName: local-models
