flux/apps/ai/ollama/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ollama
  namespace: ollama
spec:
  ingressClassName: nginx
  rules:
  - host: ollama.${GLOBAL_DOMAIN}
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: ollama
            port:
              number: 11434
  tls:
    - hosts:
        - ollama.${GLOBAL_DOMAIN}
      secretName: ollama-tls
